<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".LoginActivity"
    android:padding="15dp"
    android:background="@drawable/background_all">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/login"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginBottom="25dp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/email" />


    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:passwordToggleEnabled="true"
        >

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/login_et_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/password"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <ProgressBar
        android:id="@+id/login_progressBar"
        android:visibility="gone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp">

        <Button
            android:id="@+id/login_bt_login"
            android:text="@string/login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:backgroundTint="#8A83FF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_marginHorizontal="30dp"
            android:layout_weight="1"/>
        <Button
            android:id="@+id/login_bt_use_without_firebase"
            android:text="訪客"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            app:cornerRadius="8dp"
            android:backgroundTint="#8A83FF"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_weight="1"
            android:layout_marginRight="30dp"/>
    </LinearLayout>


    <TextView
        android:id="@+id/login_tv_registerNow"
        android:textSize="20sp"
        android:textStyle="bold"
        android:gravity="center"
        android:layout_marginTop="20dp"
        android:text="@string/click_to_register"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textColor="#8A83FF"
        />


</LinearLayout>